--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,14 @@
 *.app
 
 .DS_Store
-.makefile_*
+makefile_*
+*Type.h*
+*Type.c*
+*Type.xml
+*TypePlugin.*
 objs/
 
+# Eclipse
+.cproject
+.project
+.settings/
